--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,18 +1,3 @@
 $red-color: #CB2A00;
 $blue-color: #0FACB3;
-
-.header {
-    padding: 38px 0;
-}
-.menu-item {
-    color: $red-color;
-    font-size: 24px;
-    &:not(:last-of-type) {
-        margin-right: 35px ;
-    }
-}
-.logo {
-    color: $red-color;
-    font-weight: 700;
-    font-size: 32px;
-}
+$hover-red: #E55D39;
