--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header fx jc-sb">
     <div class="container">
         <div class="nav fx jc-sb">
             <a href="#" class="logo">kll1she</a>
@@ -9,4 +9,5 @@
             </div>
         </div>
     </div>
+    <div class="blur"></div>
 </header>
