много всего сделал

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer class="footer">
     <div class="container">
         <div class="nav fx jc-sb">
-            <a href="#" class="logo">kll1she</a>
-            <div class="menu">
-                <a href="#" class="menu-item">Обо мне</a>
+            <a href="#" class="logo ai-c">kll1she</a>
+            <div class="menu ai-c">
+                <a href="#about" class="menu-item">Обо мне</a>
                 <a href="#" class="menu-item">Проекты</a>
                 <a href="#" class="menu-item">Связаться</a>
             </div>
