--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="header fx jc-sb">
     <div class="container">
-        <div class="nav fx jc-sb">
+        <div class="nav fx jc-sb ai-c">
             <a href="#" class="logo">kll1she</a>
             <div class="menu">
-                <a href="#" class="menu-item">Обо мне</a>
+                <a href="#about" class="menu-item">Обо мне</a>
                 <a href="#" class="menu-item">Проекты</a>
                 <a href="#" class="menu-item">Связаться</a>
             </div>
